--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "arrivalsMonitor.js",
   "dependencies": {
     "async": "^0.9.0",
+    "s3-upload-stream": "^0.4.0",
     "stompit": "^0.18.1",
     "underscore": "^1.6.0"
   },
